force-app/main/default/objects/custom_create184__c/custom_create184__c.object-meta.xml
<CustomObject>
    <label>Custom created object184</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects184</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>