force-app/main/default/objects/custom_create184__c/fields/custom_create_184field635__c.field-meta.xml
<CustomField>
    <fullName>custom_create_184field635__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 184field635</label>
    <type>Checkbox</type>
</CustomField>